# meson-lily

./: meson.build  song.ily  song.ly
pieces/: meson.build  violin.ily  violin.ly
